# infectious_disease_simulation

./: README.md  additional_connections.py  buildings.py  clock.py  create_graph.py  dijkstra.py  flake.nix  initialise_people.py  main.py  plot_graph.py  pyproject.toml  roads.py
infectious_disease_simulation/: buildings.py  clock.py  create_map.py  disease.py  display.py  initialise_people.py  interface.py  main.py  mst.py  person.py  population.py  roads.py  sql_handler.py  tilemap.py
