[project]
name = "infectious-disease-simulation"
version = "1.0.0"
description = "An infectious disease simulation"
authors = [
    {name = "Avaneesh Ramasubban"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "setuptools (<81)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
infectious_disease_simulation = 'infectious_disease_simulation.main:Main'
